welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
do {
^Poucet:14: error: ';' expected but 'while' found.
} while (!sortieTrouvee())
  ^Poucet:18: error: 'while' expected but '}' found.
}
^